--- a/back/package.json
+++ b/back/package.json
@@ -24,9 +24,24 @@
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
+    "body-parser": "^1.18.3",
+    "cjs": "0.0.11",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "favicon": "0.0.2",
+    "http-errors": "^1.7.1",
     "jest": "^23.6.0",
+    "loader": "^2.1.1",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.6",
-    "rimraf": "^2.6.2"
+    "path": "^0.12.7",
+    "rimraf": "^2.6.2",
+    "serve-favicon": "^2.5.0",
+    "session": "^0.1.0",
+    "sql-template-strings": "^2.2.2",
+    "sqlite": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
