--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rakon1/react-app.git"
+    "url": "git+https://github.com/Yazid-Krayem/react-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rakon1/react-app/issues"
+    "url": "https://github.com/Yazid-Krayem/react-app/issues"
   },
-  "homepage": "https://github.com/rakon1/react-app#readme",
+  "homepage": "https://github.com/Yazid-Krayem/react-app#readme",
   "dependencies": {
     "concurrently": "^4.0.1",
     "sql-template-strings": "^2.2.2"
